@@ -102,7 +102,7 @@ tests.jvms=@TEST_JVMS@
 org.gradle.java.installations.auto-download=true
 
 # Set these to enable automatic JVM location discovery.
-org.gradle.java.installations.fromEnv=JAVA21_HOME,JAVA22_HOME,RUNTIME_JAVA_HOME
+org.gradle.java.installations.fromEnv=JAVA23_HOME,RUNTIME_JAVA_HOME
 #org.gradle.java.installations.paths=(custom paths)
 
 # Opt out of gradle enterprise build scan plugin entire.
